src/test/ui/consts/const-eval/union-ub.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/union-ub.rs:33:33
   |
LL | const BAD_BOOL: bool = unsafe { DummyUnion { u8: 42 }.bool};
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 0x2a, but expected a boolean

error[E0080]: evaluation of constant value failed
  --> $DIR/union-ub.rs:35:36
   |
LL | const UNINIT_BOOL: bool = unsafe { DummyUnion { unit: () }.bool};
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected a boolean

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
